footer alignment correction

--- a/src/screens/settings/css/profile.css
+++ b/src/screens/settings/css/profile.css
@@ -137,7 +137,7 @@ a.light-active-menu svg {
   .footer-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     gap: 11px;
     padding: 26px 49.5px 28px 15px;
 
